# FileManager

./: .gitignore  CMakeLists.txt
excallidraws/: Qt_inteface_structure.excalidraw.png~
src/: AppCore.cpp  AppCore.h  ConsoleRender.cpp  ConsoleRender.h  DirectoryWatcher.cpp  DirectoryWatcher.h  FileEntry.cpp  FileEntry.h  FileSystemManager.cpp  FileSystemManager.h  IRenderer.h  LinuxAppManager.cpp  LinuxAppManager.h  NavigationState.cpp  NavigationState.h  Types.h  main.cpp  main.h  resources.qrc
src/QtInterface/: FileListModel.cpp  FileListModel.h  MainWindow.cpp  MainWindow.h  MainWindow_Slots.cpp  MainWindow_UI.cpp  OpenWithDialog.cpp  OpenWithDialog.h  SettingsDialog.cpp  SettingsDialog.h
